--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="section-one">
         <h1 class="section-one__name">Kiruthika</h1>
         <p class="section-one__role">Web Developer</p>
-        <a class="section-one__contact" href="C:\Users\ASUS\OneDrive\Desktop\FSWD\CSS\portfolio\contactform.html">Contact</a>
+        <a class="section-one__contact" href="contactform.html">Contact</a>
     </div>
     
     <div class="section-two">
