--- a/contactform.html
+++ b/contactform.html
@@ -17,7 +17,7 @@
     <div class="section-one">
         <h1 class="section-one__name">Kiruthika</h1>
         <p class="section-one__role">Web Developer</p>
-        <a class="section-one__contact" href="kiruthikaportfolio.html">Home</a>
+        <a class="section-one__contact" href="index.html">Home</a>
         </div>
 <h3>Web developer</h3>
 <div class="contact-form">
